--- a/Index.html
+++ b/Index.html
@@ -12,7 +12,7 @@
     <div class="container">
         <img src="images/Avatar.jpg" alt="Foto de Railane, cabelo cacheado preta e blusa preta">
         <h1>Railane Carvalho</h1>
-        <p>Desenvolvedora Frontend</p>
+        <p>Auxiliar de Escritório</p>
         <ul>
             <li>
                 <a href="https://www.instagram.com/" target="_blank">Instagram</a>
